exeption 'out of card' fixed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,12 @@
     "mutex": "cpp",
     "ratio": "cpp",
     "thread": "cpp",
-    "numeric": "cpp"
+    "numeric": "cpp",
+    "cstdarg": "cpp",
+    "algorithm": "cpp",
+    "iterator": "cpp",
+    "memory_resource": "cpp",
+    "random": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
@@ -74,10 +79,7 @@
   "C_Cpp_Runner.compilerArgs": [],
   "C_Cpp_Runner.linkerArgs": [],
   "C_Cpp_Runner.includePaths": [],
-  "C_Cpp_Runner.includeSearch": [
-    "*",
-    "**/*"
-  ],
+  "C_Cpp_Runner.includeSearch": ["*", "**/*"],
   "C_Cpp_Runner.excludeSearch": [
     "**/build",
     "**/build/**",
